# cpprestsdk

./: CMakeLists.txt  package.xml
Release/: CMakeLists.txt
Release/cmake/: cpprest_find_openssl.cmake
Release/libs/websocketpp/: CMakeLists.txt
Release/src/http/common/: http_helpers.cpp
Release/src/pplx/: threadpool.cpp
