<?xml version="1.0"?>
<package format="2">
  <name>cpprest</name>
  <version>1.8.2</version>
  <description>
    cpprestsdk, websocketpp and pplx libraries
  </description>

  <maintainer email="alexis@thekobi.com">Alexis Paques</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
